# agent-trace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: basic_agent.py  claude_code_config.md  cursor_config.md  production_tracing.md  windsurf_config.md
src/agent_trace/: __init__.py  cli.py  decorator.py  hooks.py  http_proxy.py  models.py  otlp.py  proxy.py  redact.py  replay.py  store.py
tests/: test_decorator.py  test_hooks.py  test_http_proxy.py  test_models.py  test_otlp.py  test_redact.py  test_replay.py  test_store.py
