[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-trace"
version = "0.1.0"
description = "strace for AI agents. Capture and replay every tool call, LLM request, and decision point."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Siddhant Khare", email = "siddhantkhare2694@gmail.com" }
]
keywords = ["ai", "agents", "observability", "tracing", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.scripts]
agent-trace = "agent_trace.cli:main"

[project.urls]
Homepage = "https://github.com/Siddhant-K-code/agent-trace"
Repository = "https://github.com/Siddhant-K-code/agent-trace"
Issues = "https://github.com/Siddhant-K-code/agent-trace/issues"

[tool.setuptools.packages.find]
where = ["src"]
